# url-shortener

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20231001000000_init.sql
src/: error.rs  handlers.rs  main.rs  models.rs  utils.rs
